--- a/aws-apps/nugatory-dialog/NewWord.css
+++ b/aws-apps/nugatory-dialog/NewWord.css
@@ -1,3 +1,15 @@
+#trigger {
+  position: fixed;
+  left: 0.8rem;
+  bottom: 0.8rem;
+  cursor: pointer;
+  z-index: 80;
+  transform: scale(80%, 80%);
+  transition: transform 150ms ease-in-out;
+}
+#trigger:hover {
+  transform: rotate(90deg) scale(100%, 100%);
+}
 #dialog {
   position: fixed;
   top: 50%;
@@ -5,23 +17,30 @@
   translate: -50% -50%;
   background-color: var(--main-bg-color);
   box-shadow: 0.25rem 0.25rem 0.8rem #1a1a1a;
-  border: 1px solid #1a1a1a;
+  border: 0.08rem solid #1a1a1a;
   border-radius: 0.5rem;
+  max-width: 16.625rem;
+  padding: 1.5rem;
   display: grid;
-  grid-template-rows: repeat(6, minmax(3.2rem, 3.2rem));
+  grid-template-rows: auto repeat(5, minmax(3.2rem, 3.2rem));
+  row-gap: 1rem;
   justify-items: center;
   align-items: center;
-  row-gap: 1rem;
-  padding: 1.5rem;
   z-index: 100;
-}
-#dialog > #word-display {
-  font-size: 2.8rem;
 }
 #dialog > .color-div {
   display: flex;
   gap: 0.7rem;
   align-items: center;
+}
+#dialog > #word-display {
+  font-size: 2.6rem;
+  max-height: 5rem;
+  max-width: 15.4rem;
+  clip-path: view-box;
+  padding: 0.25rem 0.25rem 0 0.25rem;
+  text-align: center;
+  transform: translateY(0.2rem);
 }
 #dialog > .color-div > .color-square {
   border-radius: 0.3rem;
@@ -29,38 +48,46 @@
   width: 2.6rem;
 }
 #dialog > .color-div > .value {
-  color: var(--white-color);
   text-align: right;
   width: 2.2rem;
-}
-#dialog #new-word {
-  width: 15.6rem;
-  line-height: 1.9em;
-  padding: 0 0.5rem;
+  color: var(--white-color);
 }
 #dialog > .color-div > .value,
-#dialog #new-word,
-button {
+#dialog > .text-field > #new-word,
+#dialog > .buttons > button {
   font: normal 500 1.6em "Teko", sans-serif;
   font-optical-sizing: auto;
 }
-#dialog #new-word,
-button {
+#dialog > .text-field > #new-word {
+  width: 15.4rem;
+  height: 3.125rem;
+  padding: 0 0.5rem;
+}
+#dialog > .text-field > #new-word,
+#dialog > .buttons > button {
   outline: none;
   border: none;
   border-radius: 0.25rem;
 }
-#dialog button {
-  width: 8.2rem;
-  height: 2.8rem;
-  margin: 0 0.2rem;
+#dialog .buttons {
+  display: flex;
+  column-gap: 0.75rem;
+  width: 100%;
+  height: 100%;
+}
+#dialog > .buttons > button {
+  flex-grow: 1;
   background-color: var(--button-color);
   color: var(--white-color);
   transition: all 400ms ease-in-out;
 }
-#dialog button:hover {
+#dialog > .buttons > button:hover:enabled {
   background-color: var(--white-color);
   color: var(--button-color);
+}
+#dialog > .buttons > button:disabled {
+  opacity: 0.2;
+  cursor: not-allowed;
 }
 #overlay {
   background-color: var(--white-color);
