--- a/aws-apps/nugatory-dialog/NewWord.css
+++ b/aws-apps/nugatory-dialog/NewWord.css
@@ -10,19 +10,23 @@
 #trigger:hover {
   transform: rotate(90deg) scale(100%, 100%);
 }
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
 #dialog {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
+  margin: 0.75rem 0 0.75rem 0;
   background-color: var(--main-bg-color);
-  box-shadow: 0.25rem 0.25rem 0.8rem #1a1a1a;
+  box-shadow: 0.15rem 0.15rem 0.3rem #1a1a1a;
   border: 0.08rem solid #1a1a1a;
   border-radius: 0.5rem;
   max-width: 16.625rem;
   padding: 1.5rem;
   display: grid;
-  grid-template-rows: auto repeat(5, minmax(3.2rem, 3.2rem));
+  grid-template-rows: repeat(6, minmax(3.2rem, 3.2rem));
   row-gap: 1rem;
   justify-items: center;
   align-items: center;
@@ -35,9 +39,10 @@
 }
 #dialog > #word-display {
   font-size: 2.6rem;
-  max-height: 5rem;
-  max-width: 15.4rem;
-  clip-path: view-box;
+  max-height: 3rem;
+  max-width: 15.2rem;
+  white-space: nowrap;
+  overflow-x: auto;
   padding: 0.25rem 0.25rem 0 0.25rem;
   text-align: center;
   transform: translateY(0.2rem);
